Made repository and service

--- a/DentalPlanet.Web/DentalPlanet.Web.csproj
+++ b/DentalPlanet.Web/DentalPlanet.Web.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DentalPlanet.Data\DentalPlanet.Data.csproj" />
+    <ProjectReference Include="..\DentalPlanet.Services.Data\DentalPlanet.Services.Data.csproj" />
     <ProjectReference Include="..\DentalPlanet.Web.ViewModels\DentalPlanet.Web.ViewModels.csproj" />
   </ItemGroup>
 
