--- a/DentalPlanet.Web.ViewModels/DentalPlanet.Web.ViewModels.csproj
+++ b/DentalPlanet.Web.ViewModels/DentalPlanet.Web.ViewModels.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="X.PagedList" Version="10.5.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DentalPlanet.Data.Models\DentalPlanet.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
